RESOLVED FIXED49802
[Qt] REGRESSION (r72360): http/tests/security/aboutBlank/xss-DENIED-* tests fail
https://bugs.webkit.org/show_bug.cgi?id=49802
Summary [Qt] REGRESSION (r72360): http/tests/security/aboutBlank/xss-DENIED-* tests fail
Csaba Osztrogonác
Reported 2010-11-19 06:20:33 PST
http://build.webkit.org/results/Qt%20Linux%20Release/r72366%20%2823972%29/results.html diffs are same: -CONSOLE MESSAGE: line 1: TypeError: 'undefined' is not an object (evaluating 'target.document.body') +CONSOLE MESSAGE: line 0: TypeError: 'undefined' is not an object
Attachments
Patch (8.35 KB, patch)
2011-01-16 05:48 PST, Robert Hogan
no flags
Patch (9.24 KB, patch)
2011-01-16 05:54 PST, Robert Hogan
no flags
Patch (9.38 KB, patch)
2011-01-22 04:57 PST, Robert Hogan
no flags
Csaba Osztrogonác
Comment 1 2010-11-19 07:16:19 PST
I added the failing tests to the Skipped list: http://trac.webkit.org/changeset/72397
Gavin Barraclough
Comment 2 2010-11-19 15:05:31 PST
Hi Ossy, This should be an easy fix, but there are a couple of options, and I'm not sure which way we prefer to resolve this. We've deliberately made a change to remove the source snippet ("(evaluating 'target.document.body')" in this case) from from error messages in release builds, unless the developer extras are enabled (i.e. inspector support is turned on). So these results match correctly match those a user would see, if the inspector is not showing. So one valid resolution would be to say, these are the correct results for a release run of this test case, and we should just check in expected results matching these. However in order to ensure we are still testing the correct generation of these errors when the inspector is up, we're now always enabling the developer extras from DRT (in Qt's case, we do so from DumpRenderTree/qt/DumpRenderTreeQt.cpp). So an alternative resolution for this bug would be to explore why the developer extras are not be enabled when this test case is run, and change this (I'm guessing it's something to do with this being a http test...?). I'm not sure this buys us much, since the correct generation of these error messages is already well covered by LayoutTests. Any thoughts on a preferred solution? cheers, G.
Robert Hogan
Comment 3 2011-01-16 04:11:58 PST
(In reply to comment #2) > > We've deliberately made a change to remove the source snippet ("(evaluating 'target.document.body')" in this case) from from error messages in release builds, unless the developer extras are enabled (i.e. inspector support is turned on). So these results match correctly match those a user would see, if the inspector is not showing. In this case, developerExtras is enabled but the inspector is not showing - hence the failure. > Any thoughts on a preferred solution? > The new results seem sane - otherwise we'll need to display the web inspector for these tests.
Robert Hogan
Comment 4 2011-01-16 05:48:59 PST
Robert Hogan
Comment 5 2011-01-16 05:54:46 PST
WebKit Commit Bot
Comment 6 2011-01-22 04:33:35 PST
Comment on attachment 79097 [details] Patch Rejecting attachment 79097 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-3', 'apply-..." exit_code: 2 Last 500 characters of output: te-expected.txt patching file LayoutTests/platform/qt/http/tests/security/aboutBlank/xss-DENIED-navigate-opener-javascript-url-expected.txt patching file LayoutTests/platform/qt/http/tests/security/aboutBlank/xss-DENIED-set-opener-expected.txt patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/DumpRenderTree/qt/DumpRenderTreeQt.cpp Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Kenneth Rohde Christia..." exit_code: 1 Full output: http://queues.webkit.org/results/7605252
Robert Hogan
Comment 7 2011-01-22 04:57:54 PST
WebKit Commit Bot
Comment 8 2011-01-22 06:14:05 PST
Comment on attachment 79843 [details] Patch Clearing flags on attachment: 79843 Committed r76446: <http://trac.webkit.org/changeset/76446>
WebKit Commit Bot
Comment 9 2011-01-22 06:14:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.