2011-01-22  Robert Hogan  <robert@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] REGRESSION (r72360): http/tests/security/aboutBlank/xss-DENIED-* tests fail
        https://bugs.webkit.org/show_bug.cgi?id=49802

        * platform/qt/Skipped:
        * platform/qt/http/tests/security/aboutBlank/xss-DENIED-navigate-opener-document-write-expected.txt: Added.
        * platform/qt/http/tests/security/aboutBlank/xss-DENIED-navigate-opener-javascript-url-expected.txt: Added.
        * platform/qt/http/tests/security/aboutBlank/xss-DENIED-set-opener-expected.txt: Added.
2011-01-22  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] REGRESSION (r72360): http/tests/security/aboutBlank/xss-DENIED-* tests fail
        https://bugs.webkit.org/show_bug.cgi?id=49802

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::resetToConsistentStateBeforeTesting):
        (WebCore::DumpRenderTree::open):

git-svn-id: svn://svn.chromium.org/blink/trunk@76446 bbb929c8-8fbe-4397-9dbb-9b2b20218538